Mit Colab erstellt

--- a/VTD_DAAI.ipynb
+++ b/VTD_DAAI.ipynb
@@ -16,7 +16,7 @@
         "79KWJUT6ym73"
       ],
       "mount_file_id": "10vCEvfhy2wtX1x3gZ420HJNIox4qh-k4",
-      "authorship_tag": "ABX9TyOyOFT4Sx/vf9N5cvz6CJ81",
+      "authorship_tag": "ABX9TyNiEj9hYR9fB+bSSCdo4z3r",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -390,9 +390,9 @@
         "# Welcome to the Ventum Team Day AI Tutorial\n",
         "\n",
         "In this tutorial you will learn\n",
-        "- a lot\n",
-        "- more stuff\n",
-        "- awesomeness"
+        "- Include the most common python libs for ai and data analytics\n",
+        "- Use several ai methods to chat and integrate data\n",
+        "- Learn to code your ai-use-case based on open source and/or open ai"
       ],
       "metadata": {
         "id": "3-zDzVtZ7o8m"
@@ -401,8 +401,12 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Usefull reads:\n",
-        "https://medium.com/@akriti.upadhyay/implementing-rag-with-langchain-and-hugging-face-28e3ea66c5f7\n"
+        "## Usefull reads and links:\n",
+        "* https://medium.com/@akriti.upadhyay/implementing-rag-with-langchain-and-hugging-face-28e3ea66c5f7\n",
+        "* https://github.com/ckabelin/daai\n",
+        "* https://huggingface.co/settings/gated-repos\n",
+        "* https://www.langchain.com/\n",
+        "* https://openai.com/\n"
       ],
       "metadata": {
         "id": "ZB4F4NW_7jZp"
