Mit Colab erstellt

--- a/VTD_DAAI.ipynb
+++ b/VTD_DAAI.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "10vCEvfhy2wtX1x3gZ420HJNIox4qh-k4",
-      "authorship_tag": "ABX9TyNuNcDUlAcQAW6W/cs65RNg",
+      "authorship_tag": "ABX9TyOgCaSIspHLEa4j7a3LWOVE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -369,7 +369,8 @@
       "cell_type": "code",
       "source": [
         "max_tokens_limit: int = 20000\n",
-        "temperature: float = 1e-10 # 0.1"
+        "temperature: float = 1e-10 # 0.1\n",
+        "top_p: float = 0.9"
       ],
       "metadata": {
         "id": "Y8CkICNv6bQw"
@@ -776,7 +777,7 @@
         "      api_key = os.environ.get(\"OPENAI_API_KEY\"),\n",
         "      model_name = \"gpt-4o\",\n",
         "      temperature = temperature,\n",
-        "      top_p = 0.9\n",
+        "      top_p = top_p\n",
         "  )"
       ],
       "metadata": {
