Mit Colab erstellt

--- a/VTD_DAAI.ipynb
+++ b/VTD_DAAI.ipynb
@@ -4,8 +4,15 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "collapsed_sections": [
+        "IHWSzCaWkpCI",
+        "_kuAD6LRH-1h",
+        "y_es3ACJb6Hs",
+        "PtCrU1JscxWC",
+        "yajJfQmdc1vS"
+      ],
       "mount_file_id": "10vCEvfhy2wtX1x3gZ420HJNIox4qh-k4",
-      "authorship_tag": "ABX9TyOgCaSIspHLEa4j7a3LWOVE",
+      "authorship_tag": "ABX9TyNIVSOGQlmLtkwQ+UrzK2wl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -49,7 +56,9 @@
         "* https://github.com/ckabelin/daai\n",
         "* https://huggingface.co/settings/gated-repos\n",
         "* https://www.langchain.com/\n",
-        "* https://openai.com/\n"
+        "* https://openai.com/\n",
+        "* https://github.com/huggingface\n",
+        "* https://huggingface.co/docs/hub/datasets-downloading"
       ],
       "metadata": {
         "id": "ZB4F4NW_7jZp"
@@ -158,7 +167,7 @@
       "metadata": {
         "id": "Yog5TMfNBxkN"
       },
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -234,7 +243,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 14,
       "metadata": {
         "id": "b22OPnNLNned"
       },
@@ -264,6 +273,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## 3.1 Define basic env variables"
+      ],
+      "metadata": {
+        "id": "2rEv82XqCbax"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "os.environ[\"OPENAI_API_KEY\"] = userdata.get('OAI_TOKEN')"
@@ -271,12 +289,12 @@
       "metadata": {
         "id": "Wfl9pDBGqSq6"
       },
-      "execution_count": 21,
+      "execution_count": 15,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 16,
       "metadata": {
         "id": "sRGTytxCjKaW"
       },
@@ -297,7 +315,7 @@
       "metadata": {
         "id": "lRtDha1t0_Qf"
       },
-      "execution_count": 3,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -309,13 +327,13 @@
       "metadata": {
         "id": "dcyONjESIeVz"
       },
-      "execution_count": 4,
+      "execution_count": 18,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "## 3.1 Define Model and Parameters"
+        "## 3.2 Define Model and Parameters"
       ],
       "metadata": {
         "id": "Q8F91tWfxcLf"
@@ -329,7 +347,7 @@
       "metadata": {
         "id": "QbRZAj6dxah2"
       },
-      "execution_count": 5,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -340,7 +358,7 @@
       "metadata": {
         "id": "Irm9BX54Ssks"
       },
-      "execution_count": 6,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -351,7 +369,7 @@
       "metadata": {
         "id": "ToT_YryP6dF-"
       },
-      "execution_count": 32,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -362,7 +380,7 @@
       "metadata": {
         "id": "rtShr-uN6a3u"
       },
-      "execution_count": 8,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -375,13 +393,13 @@
       "metadata": {
         "id": "Y8CkICNv6bQw"
       },
-      "execution_count": 9,
+      "execution_count": 23,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "### 3.1.1 Define global variables"
+        "## 3.3 Define global ai variables"
       ],
       "metadata": {
         "id": "ktO8rMdQZNUV"
@@ -402,7 +420,7 @@
       "metadata": {
         "id": "2fj8kJFUZQYG"
       },
-      "execution_count": 10,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -440,7 +458,7 @@
       "metadata": {
         "id": "zHgq1j0NYYGr"
       },
-      "execution_count": 11,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -491,7 +509,7 @@
       "metadata": {
         "id": "hpoSJaZrYvfR"
       },
-      "execution_count": 12,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -522,7 +540,7 @@
       "metadata": {
         "id": "RFoaUwVk8WYV"
       },
-      "execution_count": 13,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -536,9 +554,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "d1Spl_TfRlHf",
-        "outputId": "4ac25972-5ed8-4a69-df55-fa6cd626f385"
+        "outputId": "ba7dcc58-7eca-4a5b-be68-525665437576"
       },
-      "execution_count": 14,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -572,7 +590,7 @@
       "metadata": {
         "id": "zrxBoJXfcxz2"
       },
-      "execution_count": 15,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -592,7 +610,7 @@
       "metadata": {
         "id": "r_U2zFczc4zT"
       },
-      "execution_count": 16,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -623,7 +641,7 @@
       "metadata": {
         "id": "co96lQCDmvlI"
       },
-      "execution_count": 122,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -783,7 +801,7 @@
       "metadata": {
         "id": "PB7gcYSKqwoq"
       },
-      "execution_count": 22,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -799,7 +817,7 @@
       "metadata": {
         "id": "b0w_u_Ny5HXX"
       },
-      "execution_count": 23,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -871,7 +889,7 @@
       "metadata": {
         "id": "OwF4h_0Jbz38"
       },
-      "execution_count": 53,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -892,7 +910,7 @@
       "metadata": {
         "id": "jbK-HM3G-A4m"
       },
-      "execution_count": 25,
+      "execution_count": 36,
       "outputs": []
     },
     {
@@ -975,7 +993,7 @@
       "metadata": {
         "id": "tSn4a7yDN2R9"
       },
-      "execution_count": 58,
+      "execution_count": 37,
       "outputs": []
     },
     {
@@ -997,7 +1015,7 @@
       "metadata": {
         "id": "19U82Im5QaMO"
       },
-      "execution_count": 59,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -1008,7 +1026,7 @@
       "metadata": {
         "id": "TaRYpSzpQWVX"
       },
-      "execution_count": 60,
+      "execution_count": 39,
       "outputs": []
     },
     {
@@ -1029,7 +1047,7 @@
       "metadata": {
         "id": "zpmKwzBAo6h6"
       },
-      "execution_count": 61,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -1043,10 +1061,22 @@
         "print(\"Docs loaded: \" + str(len(docs)))"
       ],
       "metadata": {
-        "id": "m29CAJ3p-fj2"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "m29CAJ3p-fj2",
+        "outputId": "81213fc6-5d26-4e90-9cf9-af56bf083f4b"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Docs loaded: 792\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1065,7 +1095,7 @@
       "metadata": {
         "id": "rZO5EwGE9G3t"
       },
-      "execution_count": 63,
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -1076,7 +1106,7 @@
       "metadata": {
         "id": "AfycpAHwSUK2"
       },
-      "execution_count": 65,
+      "execution_count": 43,
       "outputs": []
     },
     {
@@ -1096,7 +1126,7 @@
       "metadata": {
         "id": "ujaZv4fvz3q5"
       },
-      "execution_count": 36,
+      "execution_count": 44,
       "outputs": []
     },
     {
@@ -1109,7 +1139,7 @@
       "metadata": {
         "id": "Tlugq3s_yHKo"
       },
-      "execution_count": 37,
+      "execution_count": 45,
       "outputs": []
     },
     {
@@ -1129,7 +1159,7 @@
       "metadata": {
         "id": "qQ80tbmePEra"
       },
-      "execution_count": 80,
+      "execution_count": 46,
       "outputs": []
     },
     {
@@ -1140,7 +1170,7 @@
       "metadata": {
         "id": "WB0IGoJ1zMdk"
       },
-      "execution_count": 81,
+      "execution_count": 47,
       "outputs": []
     },
     {
@@ -1151,7 +1181,7 @@
       "metadata": {
         "id": "zsyM6nqZOgyg"
       },
-      "execution_count": 82,
+      "execution_count": 48,
       "outputs": []
     },
     {
@@ -1162,7 +1192,7 @@
       "metadata": {
         "id": "M9TJvTZ8PIAX"
       },
-      "execution_count": 83,
+      "execution_count": 49,
       "outputs": []
     },
     {
@@ -1173,7 +1203,7 @@
       "metadata": {
         "id": "r7FyI0phJcL0"
       },
-      "execution_count": 84,
+      "execution_count": 50,
       "outputs": []
     },
     {
@@ -1202,7 +1232,7 @@
       "metadata": {
         "id": "WrY64fScllVO"
       },
-      "execution_count": 85,
+      "execution_count": 51,
       "outputs": []
     },
     {
@@ -1227,7 +1257,7 @@
       "metadata": {
         "id": "jC3ZHbQFReru"
       },
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1249,7 +1279,7 @@
       "metadata": {
         "id": "koCb-gfxou_k"
       },
-      "execution_count": 74,
+      "execution_count": 53,
       "outputs": []
     },
     {
@@ -1274,7 +1304,7 @@
       "metadata": {
         "id": "MMcRI_P-oaEb"
       },
-      "execution_count": 75,
+      "execution_count": 54,
       "outputs": []
     },
     {
@@ -1309,7 +1339,7 @@
       "metadata": {
         "id": "pqNnqvjASNMe"
       },
-      "execution_count": 87,
+      "execution_count": 55,
       "outputs": []
     },
     {
@@ -1399,7 +1429,7 @@
       "metadata": {
         "id": "dGWq3TYG6_BW"
       },
-      "execution_count": 88,
+      "execution_count": 56,
       "outputs": []
     },
     {
@@ -1494,7 +1524,7 @@
       "metadata": {
         "id": "-9lsuOCTi0bX"
       },
-      "execution_count": 49,
+      "execution_count": 56,
       "outputs": []
     },
     {
@@ -1525,7 +1555,7 @@
       "metadata": {
         "id": "yGcX-Qn0ejS9"
       },
-      "execution_count": 50,
+      "execution_count": 57,
       "outputs": []
     },
     {
@@ -1574,7 +1604,7 @@
       "metadata": {
         "id": "HkOV1RBEicUl"
       },
-      "execution_count": null,
+      "execution_count": 58,
       "outputs": []
     },
     {
@@ -1621,6 +1651,8 @@
         "\n",
         "# Load the data\n",
         "data = loader.load()\n",
+        "\n",
+        "print(\"Datasets loaded: \" + str(len(data)))\n",
         "\n",
         "# Display the first 15 entries\n",
         "data[:2]"
